--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,7 @@
     <div id="title">
       <h1 >Welcome to Chat App </h1>
     </div>
-    <div class="container">
-      <!-- <div class="message right">Mohandas: Hey how are you?</div>
-      <div class="message left">Brijpal: Mast bhai!! tu bta....</div> -->
-    </div>
+    <div class="container"></div>
     <div class="send">
       <form action="#" id="send-container">
         <input type="text" name="messageInp" id="messageInp">
